# LUXusb

./: .gitattributes  .gitignore  .organization_plan.txt  .semgrepignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  update-checksums.yml
archive/: INDEX.md  README.md
archive/implementation-docs/: COMPLETION_REPORT.md  COSIGN_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MEDIUM_PRIORITY_IMPLEMENTATION.md
archive/old-reviews/: REPO_REVIEW_2026-01-23.md  TEST_RESULTS.md
archive/phase-docs/: BUILD_COMPLETE.md  CHECKSUMS_ENHANCED.md  ENHANCEMENTS_COMPLETE.md  MODERNIZATION_SUMMARY.md  PHASE1_COMPLETE.md  PHASE2.3_COMPLETE.md  PHASE2.3_DESIGN.md  PHASE2.4_COMPLETION.md  PHASE2_1_COMPLETE.md  PHASE2_INTEGRATION.md  PHASE2_PLAN.md  PHASE2_PROGRESS.md  PHASE3_COMPLETION.md  PHASE3_GUI_INTEGRATION.md  PHASE3_SCHEDULING_COMPLETE.md  PHASE4_ORGANIZATION_COMPLETE.md  QUICKREF_CHECKSUMS.md  README_CHECKSUMS.md  TESTING_COMPLETE.md
archive/research-docs/: DISTRO_VERIFICATION_RESEARCH.md  HIGH_VALUE_ENHANCEMENTS.md
archive/summaries/: DOCUMENTATION_UPDATE.md  ORGANIZATION_SUMMARY.md
archive/tests-archived/: README.md
archive/verification-docs/: CONSISTENCY_UPDATE.md  DISTRO_VERIFICATION_AUDIT.md  DISTRO_VERIFICATION_UPDATE.md  NEW_DISTROS_CHECKSUM_UPDATE.md
docs/: AUTOMATION_CHECKLIST.md  PROJECT_OVERVIEW.md  README.md  REPOSITORY_STRUCTURE.md
docs/architecture/: ANALYSIS_EXECUTIVE_SUMMARY.md  ARCHITECTURE.md  COMPREHENSIVE_ANALYSIS_REPORT.md  (+5 more)
luxusb/: __init__.py  __main__.py  _version.py  config.py  constants.py
scripts/: build-appimage.sh  build-boot-env.sh  fetch_checksums.py  run-dev.sh  update_new_distros.py  verify-black-screen-fix.py  verify-distros.py  version.py
tests/: conftest.py  test_all_phases.py  test_custom_iso.py  test_distro_metadata.py  test_grub_structure_comparison.py  test_phase3_scheduling.py  test_secure_boot.py  test_usb_detector.py
(+111 files in other folders)
